# INTELIcita

./: .gitignore  pyproject.toml
backend/tests/: local_ollama_rag.ipynb
frontend/app/: main.py
frontend/app/pages/: Fluxo da Arquitetura.py
